align and fixed soc icons

--- a/blog/styles/main.css
+++ b/blog/styles/main.css
@@ -192,6 +192,7 @@ body {
 
   .fixed{
     position: fixed;
+    right: 5%;
   }
 
 
